--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Django==3.2.6
+asgiref==3.4.1
+Django==4.2.6
+sqlparse==0.4.2
+django-crispy-forms==1.12.0
+django-environ==0.5.4
+psycopg2==2.9.1
 requests==2.26.0
-gunicorn==20.1.0
