added code of .yml file

--- a/deploy.yml
+++ b/deploy.yml
@@ -1,3 +1,44 @@
+# name: Deploy to Azure
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+
+#       - name: Set up Python
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: 3.8
+
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+#         working-directory: ./Greencell  # Specify your Django app folder
+
+#       - name: Collect static files
+#         run: |
+#           python manage.py collectstatic --noinput
+#         working-directory: ./Greencell  # Specify your Django app folder
+
+#       - name: Deploy to Azure
+#         run: az webapp up --name HelloGCM --resource-group HelloGreencell
+#         env:
+#           AZURE_WEBAPP_PACKAGE_PATH: .
+#         working-directory: ./Greencell  # Specify your Django app folder
+
+
+#-----------------------------------
+
+
 name: Deploy to Azure
 
 on:
@@ -10,27 +51,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.11.2
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-        working-directory: ./Greencell  # Specify your Django app folder
 
       - name: Collect static files
-        run: |
-          python manage.py collectstatic --noinput
-        working-directory: ./Greencell  # Specify your Django app folder
+        run: python manage.py collectstatic --noinput
 
       - name: Deploy to Azure
-        run: az webapp up --name HelloGCM --resource-group HelloGreencell
+        run: |
+          az webapp up -n HelloGCM -g HelloGreencell
+          az webapp config set --resource-group HelloGreencell --name HelloGCM --startup-file gunicorn_config.py
         env:
-          AZURE_WEBAPP_PACKAGE_PATH: .
-        working-directory: ./Greencell  # Specify your Django app folder
+          AZURE_WEBAPP_NAME: HelloGCM
+          AZURE_RESOURCE_GROUP: HelloGreencell
+          AZURE_LOCATION: East US
+          DJANGO_SETTINGS_MODULE: Greencell.settings
+          DJANGO_SECRET_KEY: django-insecure-aj6fjx^gi-9ql_08!u&7odja+dd)fvp495%n0b$%09ns5u+bsl
